# survey-insights

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  Explore Survey.command  README.md  docker-compose.yml  mise.toml  pyproject.toml  run-tui.sh  us_ai_survey_test_100.csv
docs/: benchmarks.md
scripts/: benchmark.py  test.sh
src/survey/: __init__.py  allowlist.py  config.py
src/survey/api/: __init__.py  app.py  deps.py  routes.py
src/survey/cli/: __init__.py  main.py
src/survey/db/: models.py  session.py
src/survey/ingest/: __init__.py  cleaning.py  pipeline.py  source.py  validation.py
src/survey/service/: __init__.py  breakdown.py  crosstab.py  distributions.py  refresh.py  upload.py
src/survey/tui/: __init__.py  __main__.py  app.py  views.py
src/survey/web/static/: app.js  index.html  meta.js
tests/: conftest.py  test_allowlist.py  test_cleaning.py  test_cli_errors.py  test_cli_meta.py  test_config.py  test_source_newest.py  test_tui_controls.py  test_tui_drop.py  test_tui_smoke.py
tests/integration/: test_breakdown.py  test_cli.py  test_cli_crosstab.py  test_cli_polish.py  test_crosstab.py  test_distribution.py  test_distribution_grouped.py  test_health.py  test_ingest.py  test_ingest_api.py  test_refresh.py  test_schema.py  test_upload.py  test_web.py
