[project]
name = "survey-insights"
version = "0.1.0"
description = "Survey Insights System: turns a survey CSV into fast, canonical insights."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "textual>=8.2.7",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pre-commit>=3.7",
    "httpx>=0.28.1",
]

[project.scripts]
survey = "survey.cli.main:main"
survey-tui = "survey.tui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/survey"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
